# rubiks-cube-representation

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/algorithms/: mod.rs
src/core/: mod.rs  tests.rs
src/core/cube/: mod.rs  tests.rs
src/core/cube/geometry/: mod.rs  tests.rs
src/core/cube/rotations/: mod.rs  tests.rs
src/core/cube/schemes/: mod.rs  tests.rs
src/core/rubiks/: mod.rs  tests.rs
src/core/rubiks/moves/: mod.rs
src/core/rubiks/moves/multiplication/: blanket_template.rs  mod.rs
src/core/rubiks/tiles/: mod.rs  tests.rs
src/core/rubiks/tiles/implementations/: mod.rs  tests.rs
src/core/rubiks/tiles/partial/: mod.rs
src/core/rubiks/tiles/restrictions/: mod.rs  tests.rs
tests/: readme_examples.rs
