[package]
name = "rubiks-cube-representation"
version = "0.1.0"
authors = ["Kazuya Haine <kazuyahaine@icloud.com>"]
edition = "2024"
description = "A mathematical library for representing and analyzing Rubik's cubes using group theory and tile permutations"
license = "MIT"
repository = "https://github.com/HaineSensei/rubiks-cube-representation"
documentation = "https://docs.rs/rubiks-cube-representation"
readme = "README.md"
keywords = ["rubiks-cube", "group-theory", "permutations", "puzzle", "mathematics"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
